--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Генеалогическое дерево</title>
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -21,8 +21,8 @@
   <button onclick="addParents()">Родители</button>
 </div>
 
-<script src="/static/js/tree.js"></script>
-<script src="/static/js/ui.js"></script>
+<script src="tree.js"></script>
+<script src="ui.js"></script>
 </body>
 </html>
 
