--- a/index.html
+++ b/index.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Генеалогическое дерево</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Генеалогическое дерево</title>
+<style>
+  body {
+    margin: 0;
+    font-family: sans-serif;
+    background: #111;
+    color: #eee;
+  }
+
+  #controls {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    background: #222;
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  button {
+    margin: 4px;
+    padding: 6px 10px;
+    background: #444;
+    color: #eee;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
+  button:hover {
+    background: #666;
+  }
+
+  svg {
+    width: 100%;
+    height: 100vh;
+    background: #181818;
+  }
+
+  .node {
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
 
-<div id="toolbar">
-  <button onclick="addRoot()">Добавить «Я»</button>
+<div id="controls">
+  <div><b>Добавить корень</b></div>
+  <button onclick="addRoot('M')">Мужчина</button>
+  <button onclick="addRoot('F')">Женщина</button>
 </div>
 
-<div id="viewport">
-  <svg id="lines"></svg>
-  <div id="tree"></div>
-</div>
+<svg id="tree"></svg>
 
-<div id="contextMenu">
-  <button onclick="addSibling()">Брат / сестра</button>
-  <button onclick="addParents()">Родители</button>
-</div>
-
-<script src="tree.js"></script>
-<script src="ui.js"></script>
+<script src="/static/js/tree.js"></script>
 </body>
 </html>
-
